--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         <a class="card--link" href="#">States</a>
       </div>
     </div>
+    <div class="container">
+      <div class="card">
+        <img class="card--avatar" src="images/Meadowlark.png" />
+        <h1 class="card--title">Meadowlark</h1>
+        <a class="card--link" href="#">States</a>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <img class="card--avatar" src="images/Mockingbird.png" />
+        <h1 class="card--title">Mockingbird</h1>
+        <a class="card--link" href="#">States</a>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
