--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     </div>
     <div class="container">
       <div class="card">
-        <img class="card--avatar" src="images/Cardinal.png" />
+        <img class="card--avatar" src="images/Cardinal.png" alt="Cardinal"/>
         <h1 class="card--title">Cardinal</h1>
         <a class="card--link" href="#">States</a>
       </div>
     </div>
     <div class="container">
       <div class="card">
-        <img class="card--avatar" src="images/Meadowlark.png" />
+        <img class="card--avatar" src="images/Meadowlark.png" alt="Meadowlark"/>
         <h1 class="card--title">Meadowlark</h1>
         <a class="card--link" href="#">States</a>
       </div>
     </div>
     <div class="container">
       <div class="card">
-        <img class="card--avatar" src="images/Mockingbird.png" />
+        <img class="card--avatar" src="images/Mockingbird.png" alt="Mockingbird"/>
         <h1 class="card--title">Mockingbird</h1>
         <a class="card--link" href="#">States</a>
       </div>
